<?xml version="1.0"?>
<package>
  <name>radio_node_manager</name>
  <version>0.1.0</version>
  <description>The radio_node_manager package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">gstavrinos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>radio_services</buildtool_depend>

  <run_depend>radio_services</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
